[package]
name = "subdb"
version = "0.1.0"
authors = ["Gav Wood <gavin@parity.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
parity-scale-codec = { version = "1.3.0", features = [ "derive" ] }
blake2-rfc = "0.2.18"
smallvec = "1.2.0"
hex = "0.4.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
derive_more = "0.99.5"
simplelog = "^0.7.4"