[package]
name = "subdb"
version = "0.1.0"
authors = ["Gav Wood <gavin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/subdb/"
description = "Experimental database for cryptographic structures."
documentation = "https://docs.rs/subdb"

[dependencies]
memmap = "0.7.0"
parity-scale-codec = { version = "1.3.0", features = [ "derive" ] }
blake2-rfc = "0.2.18"
smallvec = "1.2.0"
hex = "0.4.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
derive_more = "0.99.5"
simplelog = "^0.7.4"
twox-hash = "1.5.0"
hash-db = "0.15.2"
parking_lot = "0.10.0"
sp-database = { version = "2.0.0-alpha.5", git = "https://github.com/paritytech/substrate", branch = "gav-db-trait" }

[dev-dependencies]
criterion = "0.3.1"
tempfile = "3"

[[bench]]
name = "my_benchmark"
harness = false